<resources>
    <string name="app_name">URSAI</string>
    <string name="ursai">URSAI</string>
    <string name="descobrindo_proxima_compra">Descobrindo a sua próxima compra</string>
    <string name="conheca_ursai">Conheça a URSAI</string>
    <string name="login_uppercase">Login</string>
    <string name="bem_vindo_novamente">Bem-vindo de volta!</string>
    <string name="cnpj_ou_email">CNPJ ou Email</string>
    <string name="senha">Senha</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="ursai_reco">A URSAI é o melhor algoritmo de recomendação especializada em ecommerce para a sua empresa!</string>
    <string name="plan">Descubra nossos planos e impulsione seus lucros e sua base de clientes agora mesmo!</string>
    <string name="conhecer_os_planos">Conhecer os planos</string>
    <string name="arrow_icon_description">Seta indicando mais detalhes</string>
    <string name="choose_plan">Escolha o melhor plano que combine com a sua empresa!</string>
    <string name="basic">Plano Básico</string>
    <string name="basic_plan">• Recomendações personalizadas com base no histórico de compras do cliente\n• Suporte por email\n• Até 1000 recomendações por mês</string>
    <string name="price_bas">R$ 49.99/mês</string>
    <string name="quero_assinar">Quero assinar!</string>
    <string name="planopadrao">Plano Padrão</string>
    <string name="default_plan">• Recomendações personalizadas com base no histórico de compras do cliente e favoritos.\n• Acesso limitado a análises básicas\n• Suporte por email e chat.\n• Até 5000 recomendações por mês</string>
    <string name="planopremium">Plano Premium</string>
    <string name="premium_plan">• Recomendações altamente personalizadas com base no histórico de compras, comportamento de navegação, favoritos e análise preditiva.\n• Suporte por email, chat e telefone.\n• Até 20000 recomendações por mês. \n• Acesso a análises avançadas e relatórios personalizados.\n• Customização avançada e consultoria estratégica.</string>
    <string name="price_premium">R$ 299.00/mês</string>
    <string name="price_default">R$ 150.00/mês</string>
    <string name="cad_text">Faça o seu cadastro e comece a melhorar a jornada do seu cliente!</string>
    <string name="nm_emp">Nome da empresa</string>
    <string name="tp_emp">Tipo da empresa (segmento)</string>
    <string name="cnpj">CNPJ</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="choose">Escolha um dos planos abaixo e venda uma nova experiência para os seus clientes!</string>
    <string name="comprar">Comprar</string>
    <string name="plan_choosed">Plano escolhido:</string>
    <string name="fill">Preencha o seguinte formulário para realizar o pagamento e finalizar a compra</string>
    <string name="nm_cartao">Nome no cartão</string>
    <string name="nmr_cartao">Número do cartão</string>
    <string name="dt_val">Data de validade</string>
    <string name="cvv">CVV</string>
    <string name="total">Total</string>
    <string name="finalizar">Finalizar</string>
    <string name="admin"> Admin </string>
    <string name="nome_do_plano"> Nome do plano: </string>
    <string name="descri_o"> Descrição: </string>
    <string name="pre_o"> Preço: </string>
    <string name="adicionar_um_novo_plano">Adicionar um novo plano</string>
    <string name="edit_plan">edit_plan</string>
    <string name="delete_plan">delete</string>
    <string name="t_tulo_do_plano">Título do plano</string>
    <string name="descri_o_do_plano">Descrição do plano</string>
    <string name="pre_o_do_plano">Preço do plano</string>
    <string name="atualizar">Atualizar</string>
</resources>