<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editPlanTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/t_tulo_do_plano"
        android:inputType="text"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/editPlanDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/descri_o_do_plano"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editPlanPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/pre_o_do_plano"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar" />

</LinearLayout>
