<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/blue"
            android:padding="15dp">

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_choosed"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:fontFamily="@font/nunito" />

            <TextView
                android:id="@+id/planText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:fontFamily="@font/nunito" />
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill"
            android:textSize="15sp"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/nomeCartaoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nm_cartao"
            android:inputType="text"
            android:padding="8dp"
            android:background="@drawable/text_background" />

        <EditText
            android:id="@+id/nrmCartaoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nmr_cartao"
            android:inputType="number"
            android:padding="8dp"
            android:background="@drawable/text_background" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:background="@drawable/text_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dataValidadeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="data"
                android:hint="@string/dt_val"
                android:inputType="text"
                android:padding="8dp"
                android:background="@drawable/text_background" />

            <EditText
                android:id="@+id/cvvInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/cvv"
                android:inputType="number"
                android:padding="8dp"
                android:background="@drawable/text_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/plan_border"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="16sp"
                android:fontFamily="@font/nunito" />

            <TextView
                android:id="@+id/planPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:fontFamily="@font/nunito" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalizar"
            android:background="@color/blue"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</ScrollView>
