<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#3F37CA" android:gravity="center" android:orientation="vertical">
    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:text="@string/ursai"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:drawableEndCompat="@drawable/brain"
        app:drawableTint="#FFFFFF"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/josefin"
        android:text="@string/descobrindo_proxima_compra"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_info"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#4895EF"
            android:text="@string/conheca_ursai"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/nunito"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:backgroundTint="#4895EF"
            android:text="@string/login_uppercase"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/nunito"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>