<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#3F37CA" android:padding="16dp">
    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/josefin"
        android:gravity="center"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        app:drawableStartCompat="@drawable/brain"/>
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_novamente"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:fontFamily="@font/nunito"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="318dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:hint="@string/cnpj_ou_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#90CAF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintWidth_percent="0.9"/>
    <EditText android:id="@+id/et_password"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#90CAF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintWidth_percent="0.9"/>
    <TextView android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_a_senha"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:fontFamily="@font/nunito"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#4895EF"
        android:fontFamily="@font/nunito"
        android:text="@string/login_uppercase"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintWidth_percent="0.9"/>
</androidx.constraintlayout.widget.ConstraintLayout>