<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="#3F37CA"
            android:gravity="center">

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:fontFamily="@font/josefin"
                android:gravity="center" />
        </LinearLayout>

        <EditText
            android:id="@+id/nomePlanoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_do_plano"
            android:inputType="text"
            android:padding="12dp"
            android:backgroundTint="#3F37CA"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="20dp"
            android:autofillHints="organizationName" />

        <EditText
            android:id="@+id/descricaoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descri_o"
            android:inputType="text"
            android:padding="12dp"
            android:backgroundTint="#3F37CA"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="10dp"
            android:autofillHints="organizationType" />

        <EditText
            android:id="@+id/precoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/pre_o"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:backgroundTint="#3F37CA"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:backgroundTint="#4895EF"
            android:textColor="#FFF"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>
